@@ -2,6 +2,7 @@ Changelog file for Login component.
 
 Login 1.4.0
 ====================================
+- Added redirectBack to Register, Login and ConfirmRegister that allows dynamic redirection handling for other forms needing login/registration
 - Added redirectTo, redirectParams to ConfirmRegister that will redirect after successful confirmation
 - Added persistParams to Register snippet, useful for shopping cart implementations to persist parameters across the registration process
 - [#27] Fixed issue with activationEmail always overriding normal email
